Spostati metodi di GreenFeature in GreenUtils. Tolta la modalità di mapping.